2013-11-13 Miguel de Dios <miguel.dedios@artica.es>
	
	* operation/visual_console/render_view.php,
	operation/visual_console/public_console.php: fixed the refresh of
	visualmaps.

2013-11-12  Sergio Martin <sergio.martin@artica.es>

	* general/shortcut_bar.php: Fix styles, icons and links of the
	shortcut bar. Incident #374

2013-11-12  Sergio Martin <sergio.martin@artica.es>

	* operation/agentes/estado_monitores.php: Added action url to
	reset modules filter form work fine when the filter is a GET 
	parameter

2013-11-12  Sergio Martin <sergio.martin@artica.es>

	* operation/events/events.build_table.php
	operation/agentes/estado_monitores.php
	operation/agentes/ver_agente.php: Fixed old link in 
	module name in events list. Incident #369

2013-11-12  Vanessa Gil <vanessa.gil@artica.es>

	* operation/agentes/alerts_status.php: Fixed bug displaying
	embedded metaconsole.

2013-11-12  Vanessa Gil <vanessa.gil@artica.es>

	* operation/agentes/status_monitor.php: Fixed search filter
	in Monitor view.

2013-11-12  Sergio Martin <sergio.martin@artica.es>

	* include/javascript/pandora.js: Fix ugly chars in the
	title of the many select options.

2013-11-12 Miguel de Dios <miguel.dedios@artica.es>
	
	* general/header.php: fixed the action to click in the search
	bar with something wrote that before the javascript empty this
	field, now it does not empty.

2013-11-12 Miguel de Dios <miguel.dedios@artica.es>
	
	* operation/agentes/networkmap.php: changed the size of the field
	for the name of networkmap.

2013-11-12 Miguel de Dios <miguel.dedios@artica.es>
	
	* godmode/reporting/map_builder.php: added ids to the links for to
	the make more easy the unit test.
	
	* godmode/reporting/visual_console_builder.editor.js,
	include/functions_visual_map.php: fixed the simple value macros in
	the editor.

2013-11-11  Alejandro Gallardo <alejandro.gallardo@artica.es>

	* mobile/operation/home.php: Added an option to hide the
	logout button.
