@@ -1,5 +1,11 @@
 2013-11-13 Miguel de Dios <miguel.dedios@artica.es>
 	
+	* include/functions_html.php: fixed the checks for duplicate images
+	in the function "html_print_image" into the metaconsole
+	installations.
+
+2013-11-13 Miguel de Dios <miguel.dedios@artica.es>
+	
 	* operation/visual_console/render_view.php,
 	operation/visual_console/public_console.php: fixed the refresh of
 	visualmaps.
